k8/graphql-hive-core/hive-server-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hive-server
  namespace: graphql-hive
spec:
  selector:
    app: hive-server
  ports:
    - protocol: TCP
      port: 4000
      targetPort: 4000
