k8/graphql-hive-core/hive-web-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hive-web
  namespace: graphql-hive
spec:
  selector:
    app: hive-web
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
